--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Axios -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </head>
-  <body>
+  <body onload = start()>
     <div
       class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm"
     >
@@ -38,7 +38,7 @@
       <div class="input-group mb-5 offset-4 col-4">
         <input id="city-input" type="text" class="form-control" placeholder="Rentrer le nom d'une ville">
         <div class="input-group-append">
-          <button id="city-input-button" class="btn btn-success" type="submit">Actualiser</button>
+          <button id="city-input-button" class="btn btn-success" type="button" onclick='actualiser()'>Actualiser</button>
         </div>
       </div>
     </div>
@@ -57,7 +57,8 @@
                 <div id="icon-weather-container" ></div>
                 <h3 id="today-forecast-temp"> </h3>
               </div>
-              <button type="button" class="btn btn-lg btn-block btn-primary button-load-forecast" onclick='start()'>
+              <!--<script type="text/javascript"> window.onload = function() { start();};</script>-->
+              <!--<button type="button" class="btn btn-lg btn-block btn-primary button-load-forecast" onclick='start()'>-->
                 Quel temps fait'il aujourd'hui ?
               </button>
             </div>
@@ -71,12 +72,12 @@
             <h4 class="my-0 font-weight-normal">Demain</h4>
           </div>
           <div class="card-body">
-            <h2 id="today-forecast-main" class="card-title">
+            <h2 id="0-forecast-main" class="card-title">
             </h2>
             <div>
-              <p id="today-forecast-more-info"></p>
-              <div id="icon-weather-container" ></div>
-              <h3 id="today-forecast-temp"> </h3>
+              <p id="0-forecast-more-info"></p>
+              <div id="0-icon-weather-container" ></div>
+              <h3 id="0-forecast-temp"> </h3>
             </div>
           </div>
         </div>
@@ -85,12 +86,12 @@
             <h4 class="my-0 font-weight-normal">Après demain</h4>
           </div>
           <div class="card-body">
-            <h2 id="today-forecast-main" class="card-title">
+            <h2 id="1-forecast-main" class="card-title">
             </h2>
             <div>
-              <p id="today-forecast-more-info"></p>
-              <div id="icon-weather-container" ></div>
-              <h3 id="today-forecast-temp"> </h3>
+              <p id="1-forecast-more-info"></p>
+              <div id="1-icon-weather-container" ></div>
+              <h3 id="1-forecast-temp"> </h3>
             </div>
           </div>
         </div>
@@ -99,12 +100,12 @@
             <h4 class="my-0 font-weight-normal">Encore après demain</h4>
           </div>
           <div class="card-body">
-            <h2 id="today-forecast-main" class="card-title">
+            <h2 id="2-forecast-main" class="card-title">
             </h2>
             <div>
-              <p id="today-forecast-more-info"></p>
-              <div id="icon-weather-container" ></div>
-              <h3 id="today-forecast-temp"> </h3>
+              <p id="2-forecast-more-info"></p>
+              <div id="2-icon-weather-container" ></div>
+              <h3 id="2-forecast-temp"> </h3>
             </div>
           </div>
         </div>
